# merge_insertion_python

./: .gitignore  Makefile  README.md  __main__.py  entrypoint_for_monkeytype.py  merge_insertion.py  monkeytype.sqlite3  pyproject.toml  run.py  type_info.json
docs/: conf.py  entrypoint_monkeytype.rst  index.rst  modules.rst  src.rst  src.test.rst
docs/_build/: .buildinfo  index.html  objects.inv
docs/_build/.doctrees/: conftest.doctree  entrypoint_monkeytype.doctree  environment.pickle  index.doctree  modules.doctree  src.doctree  src.test.doctree
src/: merge_insertion_sort.py
src/test/: test_merge_insertion_sort.py
