[tool.poetry]
name = "merge_insertion_python"
version = "1.0.0"
description = "The first implementation of Ford-Johnson algorithm in python."
authors = ["ryuta69 <eyma22s.yu@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "~3.8"
black = "^20.8b1"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"
pytype = "^2020.10.8"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
