[tool.poetry]
name = "merge_insertion_python"
version = "1.0.0"
description = "The first implementation of Ford-Johnson algorithm in python."
authors = ["ryuta69 <eyma22s.yu@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "~3.8"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
flake8 = "^3.8.4"
pytype = "^2020.10.8"

[tool.black]
line-length = 120

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

